--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -17,9 +17,9 @@
         width: 24px;
         height: auto;
   
-        &.sub-logo {
-          width: 50px;
-        }
+        // &.sub-logo {
+        //   width: 50px;
+        // }
       }
     }
   
