--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -19,6 +19,9 @@
     }
 
     .image-box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
         position: relative;
         flex: 1 1 20%;
         height: 400px;
